@startuml
skinparam classAttributeIconSize 0
abstract class Imovel {
  +quartos: int
  +vagas: int
  +tipo: str
  +calcular_itens(cliente): List<ItemOrcamento>
  +calcular_aluguel_centavos(cliente): int
}
class Apartamento
class Casa
class Estudio
class Cliente {
  +nome: str
  +possui_criancas: bool
}
class ItemOrcamento {
  +descricao: str
  +valor_centavos: int
}
class ContratoImobiliario {
  +parcelas: int
  +valor_total_centavos: int
  +valor_parcela_centavos: int
}
class Orcamento {
  +aluguel_mensal_centavos: int
  +gerar_cronograma_12_meses()
  +total_primeiro_ano_centavos: int
}
Imovel <|-- Apartamento
Imovel <|-- Casa
Imovel <|-- Estudio
Orcamento *-- Cliente
Orcamento *-- Imovel
Orcamento *-- ContratoImobiliario
Imovel ..> ItemOrcamento
@enduml
